# TCRD_decoding

./: .gitignore  README.md  predict_v30.py  pyproject.toml  requirements.txt
coding_rules/: breast_coding_spec.md
docs/: 使用指南.md
tcr_decoder/: __init__.py  __main__.py  core.py  data_dictionary.py  decoders.py  derived.py  eda.py  html_report.py  input_validator.py  mappings.py  pipeline.py  report.py  ssf_registry.py  synth.py  utils.py  validators.py
tcr_decoder/scores/: __init__.py  base.py  cts5.py  engine.py  ihc4.py  molecular_subtype.py  npi.py  pepi.py  predict.py
tests/: conftest.py  test_adversarial.py  test_decoders.py  test_pipeline.py  test_round3_bugs.py  test_round4_math_verification.py  test_ssf_registry.py  test_synth.py
