[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tcr-decoder"
version = "2.0.0"
description = "Taiwan Cancer Registry (TCR) multi-cancer SSF decoder"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cancer-registry", "TCR", "ICD-O-3", "SSF", "oncology", "Taiwan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
tcr-decoder = "tcr_decoder.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tcr_decoder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["tcr_decoder"]
omit = ["tests/*", "tcr_decoder/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
